dynomite/trybuild-tests/fail/item-not-on-struct-fail.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
 --> $DIR/item-not-on-struct-fail.rs:7:1
  |
7 | #[derive(dynomite_derive::Item)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
